# ffmpeg_study

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ffmepg_playing_Sound/: ffmepg_playing_sound.cpp
src/ffmepg_playing_sound/: CMakeLists.txt  ffmepg_playing_sound.cpp.cpp
src/ffmepg_sample1/: CMakeLists.txt  ffmepg_sample1.cpp  header.h
src/get_key_frame/: CMakeLists.txt  get_key_frame.cpp
src/miniplayer/: CMakeLists.txt  audioplay.h  main.cpp  miniplayer.cpp  miniplayer.h  miniplayer.rc  miniplayerscreenwidget.cpp  miniplayerscreenwidget.h  qffmpeg.cpp  qffmpeg.h  videothread.cpp  videothread.h
src/miniplayer/forms/: PlayerMainWidget.ui  miniplayer.qrc
src/sdl_helloworld/: sdl_helloworld.cpp
src/sdl_sample1/: CMakeLists.txt  sdl_sample1.cpp
src/sdl_sample2/: CMakeLists.txt  sdl_sample2.cpp
src/sdl_sample3/: CMakeLists.txt  sdl_sample3.cpp  sdlwindow.cpp  sdlwindow.h
src/simplest_audio_player/: CMakeLists.txt  simplest_audio_player.cpp
src/simplest_player/: CMakeLists.txt  simplest_player.cpp
src/simplest_player_v2/: CMakeLists.txt  simplest_player_v2.cpp
src/util/: filehelper.cpp  filehelper.h  sdlhelper.h
src/xplay/: CMakeLists.txt  main.cpp  resource.h  videothread.cpp  xffmpeg.cpp  xffmpeg.h  xplay.cpp  xplay.h  xplayer.cpp  xplayer.h  xplayer.rc  xplayerscreenwidget.cpp  xplayerscreenwidget.h
src/xplay/forms/: PlayerMainWidget.ui  xplayer.qrc
